--- a/docs/mining/manifest-testnet.json
+++ b/docs/mining/manifest-testnet.json
@@ -4,37 +4,59 @@
         "ticker": "tDVC",
         "algorithm": "SHA-256d (Double SHA-256)",
         "consensus": "Hybrid PoW + PoS",
-        "max_supply": 21000000,
+        "max_supply": 1099511627776,
+        "max_supply_note": "2^40 (1,099,511,627,776 tDVC)",
         "decimals": 8,
         "genesis_date": "2026-02-24T00:00:00Z"
     },
     "pow": {
         "algorithm": "sha256d",
         "block_time_seconds": 60,
-        "initial_block_reward": 50.0,
+        "initial_block_reward": 250000.0,
         "pow_share": 0.6,
-        "halving_interval_blocks": 210000,
+        "halving_interval_blocks": 2100000,
+        "halving_interval_note": "~4 years at 60s block time",
         "difficulty_adjustment_interval": 36,
-        "min_difficulty_bits": "0x1F00FFFF"
+        "min_difficulty_bits": "0x1F00FFFF",
+        "progressive_difficulty": {
+            "enabled": true,
+            "epoch_blocks": 250000,
+            "description": "Every 250,000 blocks the minimum difficulty doubles, making mining progressively harder over time"
+        },
+        "max_block_size_bytes": 8388608,
+        "max_block_size_note": "8 MB",
+        "max_block_transactions": 10000
     },
     "pos": {
         "pos_share": 0.4,
-        "min_stake_amount": 1.0,
+        "min_stake_amount": 100.0,
+        "min_stake_note": "Minimum 100 tDVC to stake",
+        "pos_min_threshold": 10.0,
+        "pos_min_threshold_note": "Stakers below 10 tDVC receive no PoS rewards",
         "stake_lock_blocks": 10,
-        "distribution": "proportional to staked amount"
+        "distribution": "proportional to staked amount among eligible stakers"
     },
     "network": {
         "network_id": 2,
-        "protocol_version": 1,
+        "protocol_version": 2,
         "p2p_port": 19333,
         "rpc_port": 19334,
         "address_prefix": "tDVC",
-        "p2p_protocol": "JSON over TCP"
+        "p2p_protocol": "JSON over TCP",
+        "p2p_buffer_size": "10 MB"
     },
     "genesis": {
         "message": "DevInsiderCoin Testnet Genesis 2026",
         "timestamp": "2026-02-24T00:00:00Z",
         "initial_difficulty_bits": 520159231,
         "coinbase_reward": 0
+    },
+    "economics": {
+        "total_supply": "2^40 = 1,099,511,627,776 tDVC",
+        "initial_reward": "250,000 tDVC per block",
+        "halving_schedule": "Reward halves every 2,100,000 blocks (~4 years)",
+        "theoretical_emission": "250,000 × 2,100,000 × 2 ≈ 1.05T tDVC (capped at 2^40)",
+        "pow_pos_split": "60% PoW miner / 40% PoS stakers",
+        "fee_model": "0.001 tDVC per transfer"
     }
 }
